Implement DifficultyCommand